src/Microsoft.Data.SqlClient/netfx/src/SNI/include/sni_wrapper.hpp

struct SNI_ConnWrapper
{
    SNI_ConnWrapper(__in SNI_CONSUMER_INFO * pConsumerInfo) :
        m_pConn(NULL),
        m_fnReadComp(pConsumerInfo->fnReadComp),
        m_fnWriteComp(pConsumerInfo->fnWriteComp),
        m_ConsumerKey(pConsumerInfo->ConsumerKey),
        m_pPacket(NULL),
        m_fSyncOverAsyncRead(false),
        m_fSyncOverAsyncWrite(false),
        m_fSupportsSyncOverAsync(false),
        m_fPendingRead(false)
    {
        m_ReadResponseReady = ::CreateSemaphore(NULL, 0, 1, NULL);
        m_WriteResponseReady = ::CreateSemaphore(NULL, 0, 1, NULL);
        ::InitializeCriticalSection(&m_ReadLock);
    }

    ~SNI_ConnWrapper()
    {
        CloseHandle(m_ReadResponseReady);
        CloseHandle(m_WriteResponseReady);
        DeleteCriticalSection(&m_ReadLock);
    }

    SNI_Conn* m_pConn;
    PIOCOMP_FN m_fnReadComp;
    PIOCOMP_FN m_fnWriteComp;
    LPVOID m_ConsumerKey;

    CRITICAL_SECTION m_ReadLock;
    HANDLE m_ReadResponseReady;
    HANDLE m_WriteResponseReady;
    bool m_fPendingRead;

    SNI_Packet *m_pPacket;
    SNI_ERROR m_WriteError;
    SNI_ERROR m_Error;
    bool m_fSyncOverAsyncRead;
    bool m_fSyncOverAsyncWrite;
    bool m_fSupportsSyncOverAsync;
};
extern "C" DLLEXPORT DWORD __cdecl SNISetInfoWrapper(__out SNI_ConnWrapper * pConn, UINT QType, __in VOID * pbQInfo);
extern "C" DLLEXPORT DWORD __cdecl SNIWaitForSSLHandshakeToCompleteWrapper(__in SNI_ConnWrapper * pConn, DWORD dwMilliseconds);
extern "C" DLLEXPORT DWORD __cdecl SNIWriteAsyncWrapper(__inout SNI_ConnWrapper * pConn, __in SNI_Packet * pPacket);
extern "C" DLLEXPORT DWORD __cdecl SNIWriteSyncOverAsync(__inout SNI_ConnWrapper * pConn, __in SNI_Packet * pPacket);
extern "C" DLLEXPORT DWORD __cdecl UnmanagedIsTokenRestricted(__in HANDLE token, __out BOOL *isRestricted);