src/SNI/include/sni.hpp

extern "C" DWORD SNITerminate();
// Security functions
extern "C"  DWORD SNISecInitPackage(__out DWORD * pcbMaxToken);