src/Microsoft.Data.SqlClient/src/Interop/Windows/Sni/SniNativeMethodsX64.netfx.cs


        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNISecInitPackage(ref uint pcbMaxToken);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern void SNIServerEnumCloseWrapper([In] IntPtr packet);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern IntPtr SNIServerEnumOpenWrapper();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Unicode)]
        private static extern int SNIServerEnumReadWrapper(
            [In] IntPtr packet,
            [In, Out][MarshalAs(UnmanagedType.LPArray)] char[] readBuffer,
            [In] int bufferLength,
            [MarshalAs(UnmanagedType.Bool)] out bool more);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNISetInfoWrapper(SNIHandle pConn, QueryType queryType, [In] ref uint pbQueryInfo);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNITerminate();

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNIWaitForSSLHandshakeToCompleteWrapper(
            [In] SNIHandle pConn,
            int dwMilliseconds,
            out uint pProtocolVersion);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNIWriteAsyncWrapper(SNIHandle pConn, [In] SNIPacket pPacket);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint SNIWriteSyncOverAsync(SNIHandle pConn, [In] SNIPacket pPacket);

        [DllImport(DllName, CallingConvention = CallingConvention.Cdecl)]
        private static extern uint UnmanagedIsTokenRestricted(
            [In] IntPtr token,
            [MarshalAs(UnmanagedType.Bool)] out bool isRestricted);

        #endregion
    }
}

#endif
